k8s/postgres-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-subledger-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: postgres-subledger
  template:
    metadata:
      labels:
        component: postgres-subledger
    spec:
      volumes:
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: database-subledger-pvc
      containers:
        - name: postgres
          image: postgres:15
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-storage
              mountPath: /var/lib/postgresql/data
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"
