k8s/subleger-cluster-ip-service.yml
apiVersion: v1
kind: Service
metadata:
  name: subledger-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: server
  ports:
    - port: 5000
      targetPort: 5000
